--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Code
-baseurl: "/code" # the subpath of your site, e.g. /blog
-url: "http://slipthrough.net"
+baseurl: ""
+url: "http://code.slipthrough.net"
 twitter_username: gb_r
 github_username:  garyb
 respository: garyb/slipthrough-code
